--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   BUILD_VERSION: 2.4.0
+  BUILD_VERSION_V2: 2.4.0.${{ github.run_number }}
 
 jobs:
 
@@ -21,6 +22,8 @@ jobs:
           dotnet-version: '7.0.x'
       - name: View Build Version
         run: echo ${{ env.BUILD_VERSION }}.${{ github.run_number }}
+      - name: View Build Version
+        run: echo ${{ env.BUILD_VERSION_V2 }}
       - name: View Github Info
         run: echo repository=${{ github.repository }} event_name=${{ github.event_name }} ref=${{ github.ref }} head_ref=${{ github.head_ref }} base_ref=${{ github.base_ref }}
       - name: Checkout
@@ -34,7 +37,7 @@ jobs:
       - name: Restore nuget Packages
         run: dotnet restore Source/Mosa.sln
       - name: Build
-        run: dotnet build Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}
+        run: dotnet build Source/Mosa.sln /p:Version=${{ env.BUILD_VERSION }}.${{ github.run_number }}
       - name: Store Build Artifact
         uses: actions/upload-artifact@v3
         with:
