--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -355,7 +355,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o0
         
@@ -380,7 +380,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o1
 
@@ -405,7 +405,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o2
 
@@ -430,7 +430,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o3
 
@@ -455,7 +455,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o4
 
@@ -480,7 +480,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o5
 
@@ -505,7 +505,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o6
 
@@ -530,7 +530,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o7
 
@@ -555,7 +555,7 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o8
           
@@ -580,6 +580,6 @@ jobs:
       - name: Update Package Respository
         run: sudo apt-get -y -o Acquire::Check-Valid-Until=false update
       - name: Install Qemu and Dependencies
-        run: sudo apt-get -y -o Acquire::Retries=5 install qemu qemu-system qemu-system-x86
+        run: sudo apt-get -y -o Acquire::Retries=5 install qemu-system-x86
       - name: Unit Testing  
         run: dotnet bin/Mosa.Utility.UnitTests.dll -o9
